--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+.container {
+  display: block;
+  margin: 0 auto;
+  max-width: 1200px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container button {
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container ul {
+  padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.my-form {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+.my-form input {
+  width: 100%;
+  border: 1px solid #555;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+.my-form .title {
+  width: 300px;
+}
+.my-form .file {
+  width: 300px;
+  border: none;
+}
+.todo {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10px 0;
+  border: 1px solid #555;
+  border-radius: 5px;
+  padding: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.todo p {
+  margin: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo strong {
+  margin-right: 1rem;
 }
+.todo button {
+  margin: 0 5px;
+}
+.todo .options {
+  min-width: 100px;
+}
+.completed {
+  background-color: #555;
+}
+/*# sourceMappingURL=App.css.map */
