--- a/src/App.less
+++ b/src/App.less
@@ -24,7 +24,7 @@
         margin: 5px;
     }
     .title {
-        width: 300px;
+        width: 250px;
     }
     .description {
         
@@ -32,6 +32,14 @@
     .file {
         width: 300px;
         border: none;
+        margin-left: 20px;
+    }
+    .react-datepicker__input-container {
+        margin-top: 3px;
+        input {
+            border: none;
+            cursor: pointer;
+        }
     }
 }
 
